# CCAdvisorAgent

./: .gitignore  CMakeLists.txt  README.md  main.cc  plan.md
data/major_ingest/anthropolgy/raw/: department_courses.jsonl  program_requirements.jsonl
data/major_ingest/computer_science/raw/: department_courses.jsonl  program_requirements.jsonl
data/major_ingest/mobi/raw/: department_courses.jsonl  program_requirements.jsonl
data/rawscrape/: besoc_courses.jsonl  besoc_reqs.jsonl  compsci_courses.jsonl  compsci_reqs.jsonl
docker/: docker-compose.yml
docs/: test-architecture.md  testing.md
evals/: cases.jsonl  evals_main.cc  evalsuite.cc  scoring.cc
include/app/common/: types.hpp
include/app/conversation/: chat_management.hpp
include/app/geminiclient/: gemini_embedding.hpp  gemini_generation.hpp  gemini_requests.hpp
include/app/toolcalling/: retrieve_from_weaviate.hpp  scraper_tool.hpp  tools.hpp
include/app/weaviate/: reranker.hpp  weaviate_port.hpp
scripts/: config_weaviate.sh  major_ingest_runner.cc  populate_data_file.sh  populate_major_in_background.sh  run_evals.sh  scraperscript.cc  send_data_to_weaviate.cc
src/app/conversation/: chat_management.cc
src/app/geminiclient/: gemini_embedding.cc  gemini_generation.cc  gemini_requests.cc
src/app/toolcalling/: retrieve_from_weaviate.cc  scraper_tool.cc
src/app/weaviate/: reranker.cc  weaviate_port.cc
tests/: gemini_client_tests.cc  gemini_client_tests.hpp  tool_calling_tests.cc  tool_calling_tests.hpp  weaviate_client_tests.cc  weaviate_client_tests.hpp  weaviate_test_main.cc
